update gallery closing button

--- a/gallery.html
+++ b/gallery.html
@@ -95,12 +95,12 @@
     											<button class="btn btn-outline-dark btn-gallery mr-15 text-uppercase" data-filter=".sketches">Sketches</button>
     									</div> -->
 
-                      <div id="lightgallery" class="row mt-5 p-5 m-5">
+                      <div id="lightgallery" class="row mt-5 p-md-5 m-md-5">
 
-                        <a href="assets\img\cowgirl_300-low.jpg"  data-lg-size="562-800"  class=" col-md-2 col-sm-4 mb-3">
+                        <a href="assets\img\cowgirl_300-low.jpg"  data-lg-size="562-800"  class="col-6 col-md-2 col-sm-4 mb-3">
                           <img src="assets\img\cowgirl_300-low.jpg" data-src="" class=" img-fluid shadow lazyload" alt="Cowgirl" />
                         </a>
-                        <a href="assets\img\Donna_con_gufi_ink-low.jpg"  data-lg-size="562-800"  class=" col-md-2 col-sm-4 mb-3">
+                        <a href="assets\img\Donna_con_gufi_ink-low.jpg"  data-lg-size="562-800"  class="col-6  col-md-2 col-sm-4 mb-3">
                           <img src="assets\img\Donna_con_gufi_ink-low.jpg" data-src="" class=" img-fluid shadow lazyload " alt="Donna con Gufi" />
                         </a>
                         <a href="assets\img\Donna_con_serpenti-low.jpg"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
@@ -124,8 +124,6 @@
                         <a href="https://cdna.artstation.com/p/assets/images/images/036/615/172/large/ester-cardella-mummyes-ink-150.jpg?1618158412"  data-lg-size="562-800" class="col-md-2 col-sm-4 mb-3">
                           <img src="https://cdna.artstation.com/p/assets/images/images/036/615/172/large/ester-cardella-mummyes-ink-150.jpg?1618158412" data-src="" class=" img-fluid shadow lazyload " alt="Mummy" />
                         </a>
-
-
 
                         <a href="https://cdna.artstation.com/p/assets/images/images/032/719/010/large/ester-cardella-dark-lady-100.jpg?1607278439"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
                           <img src="https://cdna.artstation.com/p/assets/images/images/032/719/010/large/ester-cardella-dark-lady-100.jpg?1607278439" data-src="" class="img-fluid shadow lazyload " alt="Vampire" />
