--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="bio.html"><span>About</span></a></li>
                 <li><a href="gallery.html"><span>Gallery</span></a></li>
                 <li><a href="contact.html"><span>Contact</span></a></li>
-                <li class="active "><a href="contact.html"><span>Store</span></a></li>
+                <li class="active "><a href="shop.html"><span>Store</span></a></li>
 
               </ul>
             </div>
@@ -66,7 +66,7 @@
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
           <div class="d-flex align-items-center">
-            <a href="" class="go-store textGradient btn text-uppercase" target="_blank">Store </a>
+            <a href="shop.html" class="go-store textGradient btn text-uppercase" target="_blank">Store </a>
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 
           </div>
