--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
           <div class="d-flex align-items-center">
-            <a href="shop.html" class="go-store textGradient btn text-uppercase" target="_blank">Store </a>
+            <a href="shop.html" class="go-store textGradient btn text-uppercase">Store</a>
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 
           </div>
@@ -79,7 +79,7 @@
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title textGradient mt-md-5">About me</h1>
                 <hr style="width:60%;">
-                <p class="article">
+                <p class="text-light article">
                   Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
       Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
 </p>
@@ -118,7 +118,7 @@
         <div class="col-md-7 p-5">
           <h1 class="h1 title textGradient mt-md-5 w-100">The Best Works</h1>
           <hr style="width:60%;">
-          <p class="article">
+          <p class="article text-light">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="gallery.html"><button type="button" class="btn btn-lg">Gallery</button>
             </a>
