--- a/shop.html
+++ b/shop.html
@@ -53,7 +53,7 @@
 
       <div class="container">
         <div  class="nav navbar-expand-md d-flex flex-wrap align-items-center justify-content-between">
-          <div class="colorlib-navbar-brand">
+          <div class="colorlib-navbar-brand col-sm-12 col-md-auto">
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
 
@@ -81,11 +81,10 @@
                 </li>
               </ul>
             </div>
-            <div class="text-end">
+            <div class="logs">
               <button type="button" class="btn mr-2">Login</button>
               <button type="button" class="btn ">Sign-up</button>
             </div>
-            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
               <span class="navbar-toggler-icon"></span>
