shop and home fixed

--- a/shop.html
+++ b/shop.html
@@ -23,35 +23,14 @@
 
 
 
-  <body>
+  <body  class="darker">
 
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 
-  <symbol id="home" viewBox="0 0 16 16">
-    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
-  </symbol>
-  <symbol id="cart" viewBox="0 0 576 512">
-<path fill="currentColor" d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z"/>  </symbol>
-  <symbol id="speedometer2" viewBox="0 0 16 16">
-    <path d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4zM3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.389.389 0 0 0-.029-.518z"/>
-    <path fill-rule="evenodd" d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A7.988 7.988 0 0 1 0 10zm8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3z"/>
-  </symbol>
-  <symbol id="table" viewBox="0 0 16 16">
-    <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
-  </symbol>
-  <symbol id="people-circle" viewBox="0 0 16 16">
-    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-  </symbol>
-  <symbol id="grid" viewBox="0 0 16 16">
-    <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
-  </symbol>
-</svg>
 
-  <header>
-    <div class="px-3 py-2">
+  <header class="bg-transparent">
+    <div class="px-3 mb-5">
 
-      <div class="container">
+      <div class="container-fluid">
         <div  class="nav navbar-expand-md d-flex flex-wrap align-items-center justify-content-between">
           <div class="colorlib-navbar-brand col-sm-12 col-md-auto">
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
@@ -59,7 +38,7 @@
 
            <div class="collapse navbar-collapse" id="navbarToggler">
 
-          <ul class="nav col-12 col-lg-auto my-2 ml-4 justify-content-center my-md-0 text-center">
+          <ul class="nav col-lg-auto my-2 ml-4 flex-column-reverse flex-md-row align-items-end my-md-0 text-center">
             <li>
               <a href="index.html" class="nav-link text-secondary">
                 <i class="bi d-block mx-auto mb-1 fas fa-home"></i>
@@ -97,9 +76,55 @@
       </header>
 
 
-      <div class="p-5 m-5">
-        <p class="lead p-5 m-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="container mt-5 mb-5 pt-5">
+          <div class="d-flex justify-content-center row mt-5">
+              <div class="col-md-10">
+                  <div class="row p-2 bg-black ">
+                      <div class=" col-3 mt-1">
+                        <img class="img-fluid img-responsive rounded product-image" src="https://www.seekpng.com/png/full/17-176282_free-vector-t-shirt-vector-template-t-shirt.png"></div>
+                      <div class="col-6 mt-1">
+                          <h5 class="h5 text-light">ESEMPIO 1</h5>
+                          <div class="d-flex flex-row">
+                          </div>
+                          <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
+                          <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
+                          <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                      </div>
+                      <div class="align-items-center align-content-center col-3 border-left mt-1">
+                          <div class="d-flex flex-row align-items-center">
+                              <h4 class="mr-1 text-light">$13.99</h4>
+                          </div>
+                          <h6 class="text-success">Free shipping</h6>
+                          <div class="d-flex flex-column mt-4">
+                            <button class="btn btn-primary btn-sm" type="button"><a href="details1.html">Details</a></button>
+                            <button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to cart</button></div>
+                      </div>
+                  </div>
 
+
+
+                  <div class="row p-2 mt-3 bg-black ">
+                      <div class=" col-3 mt-1">
+                        <img class="img-fluid img-responsive rounded product-image" src="https://www.seekpng.com/png/full/17-176282_free-vector-t-shirt-vector-template-t-shirt.png"></div>
+                      <div class="col-6 mt-1">
+                          <h5 class="h5 text-light">ESEMPIO 2</h5>
+                          <div class="d-flex flex-row">
+                          </div>
+                          <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
+                          <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
+                          <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                      </div>
+                      <div class="align-items-center align-content-center col-3 border-left mt-1">
+                          <div class="d-flex flex-row align-items-center">
+                              <h4 class="mr-1 text-light">$13.99</h4>
+                          </div>
+                          <h6 class="text-success">Free shipping</h6>
+                          <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to cart</button></div>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
       </div>
 
         <footer id="footer" class="pb-50 pb-md-100">
@@ -151,11 +176,13 @@
         	</div>
         </footer>
 
+
       	<script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/78ffc68b9f.js" crossorigin="anonymous"></script>
 
         <script src="assets/js/main.js"></script>
+
       	</body>
       </html>
