--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       </div>
     </nav>
 
-    <div id="colorlib-page" class="">
+    <div id="colorlib-page">
       <header class="d-flex">
       	<div class="container">
 	        <div class="colorlib-navbar-brand">
-	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
+	          <a class="colorlib-logo mt-0" href="index.html">Ester Cardella</a>
 	        </div>
           <div class="d-flex align-items-center">
             <a href="shop.html" class="go-store textGradient btn text-uppercase">Store</a>
@@ -75,8 +75,8 @@
 
       <section class="bg-home">
 	      <div class="container first-content mt-5">
-	        <div class="row no-gutters align-items-center">
-	          <div class="col-md-7 p-5">
+	        <div class="row no-gutters align-items-center ">
+	          <div class="col-md-7 py-5 my-5 mx-0 px-0">
                 <h1 class="h1 title textGradient mt-md-5">About me</h1>
                 <hr style="width:60%;">
                 <p class="text-light article">
@@ -89,42 +89,42 @@
 	        </div>
 	      </div>
 	    </section>
-    </div>
-  </div>
 
-
-  <section class="gallery ">
-    <div class="container mt-5 ">
-      <div class="row no-gutters align-items-center">
-        <div class="col-md-5 pr-0 order-1 pb-5 mb-5">
-          <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
-        -->
+      <section class="gallery ">
+        <div class="container  mt-5 ">
+          <div class="row no-gutters align-items-center ">
+            <div class="col-md-5 py-5 mx-0 px-0 order-1">
+              <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
+            -->
 
             <div id="carousel" class="carousel vert slide" data-ride="carousel" data-interval="3100">
 
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block mx-auto img-fluid" src="assets/img/details/cowgirl_300_detail.jpg" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block mx-auto img-fluid" src="assets/img/details/cemetery_300_details.jpg" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block mx-auto img-fluid" src="assets/img/details/Donna_con_Lince_ink_details.jpg" alt="Third slide">
-                    </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block mx-auto img-fluid" src="assets/img/details/cowgirl_300_detail.jpg" alt="First slide">
                 </div>
+                <div class="carousel-item">
+                  <img class="d-block mx-auto img-fluid" src="assets/img/details/cemetery_300_details.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block mx-auto img-fluid" src="assets/img/details/Donna_con_Lince_ink_details.jpg" alt="Third slide">
+                </div>
+              </div>
             </div>
-      </div>
-        <div class="col-md-7 p-5">
-          <h1 class="h1 title textGradient mt-md-5 w-100">The Best Works</h1>
-          <hr style="width:60%;">
-          <p class="article text-light">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="gallery.html"><button type="button" class="btn btn-lg">Gallery</button>
-            </a>
           </div>
-      </div>
-    </section>
+          <div class="col-md-7 py-5 mx-0 px-0">
+            <h1 class="h1 title textGradient mt-md-5 w-100">The Best Works</h1>
+            <hr style="width:60%;">
+            <p class="article text-light">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="gallery.html"><button type="button" class="btn btn-lg">Gallery</button>
+              </a>
+            </div>
+          </div>
+        </section>
+    </div>
+  </div>
+
 
 
 
