--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   				<a class="nav-link" href="gallery.html">&nbsp;&nbsp;&nbsp;Gallery&nbsp;&nbsp;&nbsp;</a>
   			</li>
   			<li class="nav-item ">
-  				<a class="nav-link" href="contacts.html">&nbsp;&nbsp;&nbsp;Contatti&nbsp;&nbsp;&nbsp;</a>
+  				<a class="nav-link" href="contact.html">&nbsp;&nbsp;&nbsp;Contatti&nbsp;&nbsp;&nbsp;</a>
   			</li>
   			<li class="nav-item">
   				<a class="nav-link" href="shop.html">&nbsp;&nbsp;&nbsp;Shop&nbsp;&nbsp;&nbsp;</a>
