--- a/shop.html
+++ b/shop.html
@@ -28,15 +28,14 @@
 
 
   <header class="bg-transparent">
-    <div class="px-3 mb-5">
 
       <div class="container-fluid">
-        <div  class="nav navbar-expand-md d-flex flex-wrap align-items-center justify-content-between">
+        <div  class="navbar-container nav navbar-expand-md d-flex flex-wrap align-items-center justify-content-between">
           <div class="colorlib-navbar-brand col-sm-12 col-md-auto">
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
 
-           <div class="collapse navbar-collapse" id="navbarToggler">
+           <div class="collapse navbar-collapse sidebar-collapse" id="navbarToggler">
 
           <ul class="nav col-lg-auto my-2 ml-4 flex-column-reverse flex-md-row align-items-end my-md-0 text-center">
             <li>
@@ -60,6 +59,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="logs">
               <button type="button" class="btn mr-2">Login</button>
               <button type="button" class="btn ">Sign-up</button>
@@ -71,7 +71,6 @@
 
 
           </div>
-        </div>
         </div>
       </header>
 
