update login and register pages

--- a/shop.html
+++ b/shop.html
@@ -61,11 +61,16 @@
             </div>
 
             <div class="logs">
-              <button type="button" class="btn mr-2">Login</button>
-              <button type="button" class="btn ">Sign-up</button>
+              <a href="login.html">
+                <button type="button" class="btn mr-2">Login</button>
+              </a>
+              <a href="register.html">
+                <button type="button" class="btn ">Sign-up</button>
+              </a>
             </div>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
+            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarToggler">
+              <span class="textGradient my-1 mx-2 close">&times;</span>
               <span class="navbar-toggler-icon"></span>
             </button>
 
