--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@
     		<div class="input-group-prepend">
     		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
     		 </div>
-            <input name="" class="form-control" placeholder="Full name" type="text">
+            <input name="" class="form-control" placeholder="Username" type="text">
         </div>
          <!-- form-group// -->
 
@@ -120,17 +120,6 @@
 
         	<input name="" class="form-control" placeholder="Phone number" type="text">
         </div> <!-- form-group// -->
-        <div class="form-group input-group">
-        	<div class="input-group-prepend">
-    		    <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-    		</div>
-    		<select class="form-control">
-    			<option selected=""> Select job type</option>
-    			<option>Designer</option>
-    			<option>Manager</option>
-    			<option>Accaunting</option>
-    		</select>
-    	</div> <!-- form-group end.// -->
         <div class="form-group input-group">
         	<div class="input-group-prepend">
     		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
